force-app/main/default/objects/CventEvents__OpportunityConfiguration__c/CventEvents__OpportunityConfiguration__c.object-meta.xml
<CustomObject>
    <description>Stores the configuration for the automatic opportunity creation.</description>
    <label>Opportunity Configuration</label>
    <nameField>
        <displayFormat>OC-{00000000}</displayFormat>
        <label>Opportunity Configuration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>