force-app/main/default/objects/CventEvents__OpportunityConfiguration__c/fields/CventEvents__OpportunityAmountString__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__OpportunityAmountString__c</fullName>
    <description>Amount value of the Opportunity. Has text type in order to keep data tags in addition to numeric values.</description>
    <inlineHelpText>Amount value of the Opportunity.</inlineHelpText>
    <label>Opportunity Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>