force-app/main/default/objects/CventEvents__OpportunityConfiguration__c/fields/CventEvents__OpportunityCloseDate__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__OpportunityCloseDate__c</fullName>
    <description>Close Date of the Opportunity.</description>
    <inlineHelpText>Close Date of the Opportunity.</inlineHelpText>
    <label>Opportunity Close Date</label>
    <type>Date</type>
</CustomField>