force-app/main/default/objects/CventEvents__OpportunityConfiguration__c/fields/CventEvents__OpportunityContactRole__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__OpportunityContactRole__c</fullName>
    <description>Role of the Opportunity Contact Role.</description>
    <inlineHelpText>Role of the Opportunity Contact Role.</inlineHelpText>
    <label>Opportunity Contact Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>