force-app/main/default/objects/CventEvents__OpportunityConfiguration__c/fields/CventEvents__OpportunityDescription__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__OpportunityDescription__c</fullName>
    <description>Description of the Opportunity.</description>
    <inlineHelpText>Description of the Opportunity.</inlineHelpText>
    <label>Opportunity Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>