force-app/main/default/objects/CventEvents__OpportunityConfiguration__c/fields/CventEvents__OpportunityLeadSource__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__OpportunityLeadSource__c</fullName>
    <description>Lead Source of the Opportunity.</description>
    <inlineHelpText>Lead Source of the Opportunity.</inlineHelpText>
    <label>Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>