force-app/main/default/objects/CventEvents__OpportunityConfiguration__c/fields/CventEvents__OpportunityName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__OpportunityName__c</fullName>
    <description>Name of the Opportunity.</description>
    <inlineHelpText>Name of the Opportunity.</inlineHelpText>
    <label>Opportunity Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>