force-app/main/default/objects/CventEvents__OpportunityConfiguration__c/fields/CventEvents__OpportunityStage__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__OpportunityStage__c</fullName>
    <description>Stage of the Opportunity.</description>
    <inlineHelpText>Stage of the Opportunity.</inlineHelpText>
    <label>Opportunity Stage</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>