force-app/main/default/objects/CventEvents__OpportunityConfiguration__c/fields/CventEvents__OpportunityType__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__OpportunityType__c</fullName>
    <description>Type of the Opportunity.</description>
    <inlineHelpText>Type of the Opportunity.</inlineHelpText>
    <label>Opportunity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>